# RProxy

./: CMakeLists.txt  README.markdown
CMakeModules/: FindLibHiredis.cmake
src/: CMakeLists.txt  cfg.c  cfg_ip_id_map.c  cfg_ip_id_map.h  ip_id_map.c  ip_id_map.h  redis_server.c  redis_server.h  redis_servers.c  redis_servers.h  rproxy.c  rproxy.h
test/smoke/: smoke_cfg.cfg
test/unit/: CMakeLists.txt
